...
        ref.read(authViewModelProvider.notifier).login(
          _usernameController.text,
          _passwordController.text
        );
      },
      header: const VillaHeader(
        title: 'Login',
      ),
      onSecondaryAction: isLoading ? null : (){
        Navigator.of(context).push(
          MaterialPageRoute(builder: (context) => const RegisterScreen()),
        );
      },
...
              Text(
                'An ecommerce application',
                style: typography.body,
              ),
              const SizedBox(height: 36),
              VillaTextField(
                labelText: 'Username',
                controller: _usernameController,
              ),
              const SizedBox(height: 16),
              VillaTextField(
                labelText: 'Password',
                obscureText: true,
                controller: _passwordController,
              ),
            ],
          ),
        ),
...
